--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -28,3 +28,5 @@ jobs:
         run: npm run deploy-storybook -- --ci --existing-output-dir=storybook-static 
         env:
           GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN}}
+permissions:
+  contents: write
