--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/react-checkbox": "^1.2.3",
+    "@storybook/addon-a11y": "^8.6.12",
     "@tailwindcss/vite": "^4.1.4",
     "clsx": "^2.1.1",
     "radix-ui": "^1.3.4",
